# ros2_knowledge_graph

./: README.md
.github/workflows/: master.yaml
ros2_knowledge_graph/: CMakeLists.txt  README.md  package.xml
ros2_knowledge_graph/include/ros2_knowledge_graph/: Graph.hpp  GraphInterface.hpp  GraphMaster.hpp  GraphNode.hpp  Layer.hpp  Types.hpp  graph_utils.hpp
ros2_knowledge_graph/src/: graph_master.cpp  graph_terminal.cpp
ros2_knowledge_graph/src/ros2_knowledge_graph/: Graph.cpp  GraphMaster.cpp  GraphNode.cpp  Types.cpp
ros2_knowledge_graph/test/: CMakeLists.txt  graph_utils_test.cpp  ros2_knowledge_graph_node_test.cpp  ros2_knowledge_graph_test.cpp  test_graph_A_node.cpp  test_graph_B_node.cpp  test_graph_C_node.cpp
ros2_knowledge_graph_msgs/: CMakeLists.txt  package.xml
ros2_knowledge_graph_msgs/msg/: Content.msg  Edge.msg  Graph.msg  GraphUpdate.msg  Node.msg  Property.msg  Signature.msg
ros2_knowledge_graph_msgs/srv/: GraphUpdateRequest.srv
ros2_knowledge_graph_plugins/: CMakeLists.txt  package.xml  ros2_kg_plugins.xml
ros2_knowledge_graph_plugins/include/ros2_kg_tf_plugin/: TFLayer.hpp
ros2_knowledge_graph_plugins/src/ros2_kg_tf_plugin/: TFLayer.cpp
ros2_knowledge_graph_plugins/test/: CMakeLists.txt  ros2_kg_tf_test.cpp
ros2_knowledge_graph_terminal/: CMakeLists.txt  package.xml
ros2_knowledge_graph_terminal/include/ros2_knowledge_graph_terminal/: Terminal.hpp
ros2_knowledge_graph_terminal/src/: terminal_node.cpp
ros2_knowledge_graph_terminal/src/ros2_knowledge_graph_terminal/: Terminal.cpp
ros2_knowledge_graph_viewer/: mainpage.dox  package.xml  plugin.xml  setup.py
ros2_knowledge_graph_viewer/resource/: Ros2KnowledgeGraph.ui
ros2_knowledge_graph_viewer/src/bica_rqt_graph/: bica_graph.py  bicagraph2_impl.py
ros2_knowledge_graph_viewer/src/ros2_knowledge_graph_viewer/: dotcode.py  main.py  ros2_knowledge_graph.py  ros2_knowledge_graph2_impl.py
ros2_knowledge_graph_viewer/test/: dotcode_test.py
